# Johnathan-agent

./: AI_JOURNAL.md  CLAUDE.md  Cargo.toml  LEARNING_PLAN.md  README.md  TOPICS.md
.claude/: settings.json
.claude/commands/: teach.md
docs/: topic-3.md  topic-4.md  topic-5.md
docs/topics/: 01-what-is-an-ai-agent.md  02-the-agent-loop-repl.md  03-cli-basics.md  04-http-and-api-basics.md  05-anthropic-api.md  06-streaming-responses.md  08-tool-use-function-calling.md  09-designing-a-tool-system.md
src/: main.rs
src/api/: client.rs  mod.rs
src/tools/: get_time.rs  mod.rs  registry.rs
