[package]
name = "Johnathan-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }  # CLI argument parsing
reqwest = { version = "0.12", features = ["blocking", "json"] }  # HTTP client
serde = { version = "1", features = ["derive"] }  # Serialization
serde_json = "1"  # JSON handling
